src/TRAISI/ClientApp/src/app/survey-builder/components/nested-drag-and-drop-list/nested-drag-and-drop-list.component.scss
@import '../../../../scss/helpers.scss';


.page-questions-empty {
	height: 50px;
}
.page-questions {
	border: 1px dashed darkslategray;
	border-radius: 5px;
	padding: 0px;
	margin: 3px;
}

.question-number {
	vertical-align: middle !important;
	text-align: center !important;
	color: white !important;
	font-weight: bold !important;
	font-size: 16px;
	padding: 10px;
	margin-top: 7px;
	margin-left: 2px;
}

.page-question {
	background-color: $gray-800;
	border-top: 1px solid lightgray;
	border-bottom: 1px solid lightgray;
	padding:10px;
	margin:2px 0px 2px 0px;
	color:white;
	min-height: 43px;

	.question-text {
		margin-left: 60px;
		margin-right: 50px;
		white-space: nowrap;
		overflow-x: hidden;
	}
	.question-text:hover {
		overflow-x: auto;
	}
	.icon {
		margin-left: 10px;
		margin-right: 10px;
		float: left;
		margin-top:-1px;
	}
	.question-move-icon {
		flex:unset;
		margin-right: 10px;
		float: right;
		margin-top:-1px;
		cursor: move;
	}
	.config-icon {
		flex: unset;
		margin-right: 10px;
		float: right;
		margin-top:-1px;
	}
}

.page-part {
	background-color: $gray-600;
	border-top: 1px solid lightgray;
	border-bottom: 1px solid lightgray;
	padding:10px;
	margin:2px 0px 0px 0px;
	color:white;
	min-height: 43px;

	.question-text {
		margin-left: 60px;
		margin-right: 50px;
		white-space: nowrap;
		overflow-x: hidden;
	}
	.question-text:hover {
		overflow-x: auto;
	}
	.icon {
		margin-left: 10px;
		margin-right: 10px;
		float: left;
		margin-top:-1px;
	}
	.question-move-icon {
		flex:unset;
		margin-right: 10px;
		float: right;
		margin-top:-1px;
		cursor: move;
	}
	.config-icon {
		flex:unset;
		margin-right: 10px;
		float: right;
		margin-top:-1px;
	}
}

.question-options {
	background-color: white;
}

.question-part-container {
	margin-left:5px;
	margin-right:5px;
	margin-bottom:10px;
	overflow:hidden;
}

.drag-over {
	background-color: #eaedff !important;
}

.question-part-container-placeholder {
	text-align: center;
	padding-top:7px;
	font-size:24px;
	font-weight:bold;
	opacity: 0.5;
}

.config-background {
	background-color: $gray-100;
}

.config-title-icon {
	margin-top: -3px;
	margin-right: 5px;
}

.page-question-icon {
	width: 15px;
}

.color-unset {
	color: unset;
}

